Wed Apr  9 18:51:59 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* Fixed stack overflow in Irssi SILC client.  Affected
	  file irssi/src/silc/core/client_ops.c.

	* Check that Host is set in ServerConnection and RouterConnection
	  in silcd.conf.  Affected file silcd/serverconfig.c.

	* Fixed crash in server with protocol completion callbacks,
	  namely rekey and backup resuming protocols.  Affected files
	  are silcd/server_backup.c and silcd/server.c.

	* Fixed rekey protocol to not restart if it is started already.
	  Affected files are lib/silcclient/client.c and
	  silcd/server.c.c

Mon Mar 17 18:35:24 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Rewrote SilcList, affected file lib/silcutil/silc*list.h.

	* Fixed EOF handling in SILC Config, affected file
	  lib/silcutil/silcconfig.c.

	* Fixed buffer overflows in lib/silcutil/silcstrutil.c.

	* Fixed RESOLVING flag handling in JOIN notify and other
	  notifys to handle the resolvings correctly in client library.
	  Affected file lib/silcclient/client_notify.c.

	* Do not send full INVITE and BAN lists in INVITE and BAN
	  notifys, only the changed information.  Affected file
	  silcd/command.c.

	* Fixed INVITE notify sending in INVITE command, send it
	  only when needed.  Affected file silcd/command.c.

	* Handle the founder key change properly in CMODE_CHANGE
	  notify.  Bug #122.  Affected file silcd/packet_receive.c.

Sun Mar  9 16:29:20 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Remove the mark for output (mark it only for input) after
	  purging outgoing queue.  Prevents the "Error in select()"
	  floods.  Affected file silcd/packet_send.c.

	* Fixed incorrect connection deletion from client library
	  after calling "connect" client operation.  Could cause
	  crashes for example during reconnect timeouts.  Affected
	  files are lib/silcclient/client.c and
	  irssi/src/silc/core/client_ops.c.

	* Check server private key file permissions before starting